components/test/res/TestsParameterInput/TestAmbiguousParameters.scala

import ch.epfl.lamp.specialized._
import scala.reflect.ClassTag

class C[T: ClassTag, U: ClassTag] {

   def m() = {
      specialized {
         Unit
      }
   }
}